# smt-optim

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/source/: benchmark_registry.ipynb  conf.py  index.md
docs/source/getting_started/: constrained_optim.ipynb  installation.md  mixed_var_optim.ipynb  multifidelity_optim.ipynb  unconstrained_optim.ipynb
examples/: ego.ipynb  imse_example.ipynb  logging.ipynb  multi_obj.ipynb  sego.ipynb  vfpi_old.ipynb
src/smt_optim/: __init__.py  frameworks.py
src/smt_optim/acquisition_functions/: __init__.py  ehvi.py  expected_improvement.py  fidelity_correlation.py  integrated_variance_reduction.py  mpi.py  probability_improvement.py
src/smt_optim/acquisition_strategies/: __init__.py  base.py  mfsego.py  mosego.py  vfpi.py
src/smt_optim/benchmarks/: base.py  registry.py
src/smt_optim/core/: __init__.py  driver.py  problem.py  sample.py  state.py
src/smt_optim/postprocessing/: convergence_profile.py  load_data.py
src/smt_optim/subsolvers/: __init__.py  multistart.py
src/smt_optim/surrogate_models/: __init__.py  base.py  smt.py
src/smt_optim/utils/: constraints.py  get_fmin.py  initial_design.py  json.py  logger.py  multi_obj.py  plot_2d.py  stop_criteria.py
src/tests/: requirements.txt
src/tests/test_convergence/: _test_getting_started.py  test_imse.py
src/tests/test_integration/: test_ego.py  test_imse.py  test_mfsego.py  test_minimize.py  test_mosego.py  test_opt_config.py  test_pymoo_benchmarks.py  test_sego.py
src/tests/test_unit/: test_benchmarks.py  test_console_logger.py  test_constraints_relaxation.py  test_driver.py  test_ei.py  test_imse.py  test_json.py  test_json_logging.py  test_mfck.py  test_multistart.py  (+5 more)
(+19 files in other folders)
