[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "smt-optim"
version = "0.1.3"
authors = [
  { name="Oihan Cordelier", email="oihan.cordelier@polymtl.ca" },
]
description = "A Python toolbox for constrained and multi-fidelity Bayesian optimization"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "smt[gpx]>=2.14.1",
    "pymoo>=0.6.1.6",
]

license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SMTorg/smt-optim"
Issues = "https://github.com/SMTorg/smt-optim/issues"


[project.optional-dependencies]
dev = [
  "ruff",
  "coverage",
]

[tool.ruff]
exclude = ["*.ipynb"]
